# ipc-runner

./: .gitignore  CMakeLists.txt  LICENSE  README.md  client.cpp  configure.sloth  server.cpp  shared.cpp
